--- a/css/function.css
+++ b/css/function.css
@@ -17,11 +17,16 @@ body{
     justify-content: center;
 }
 
+.button_mobile{
+    display: none;
+}
+
 .section_1{
     background-image: url("bck4.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -147,7 +152,7 @@ a{
     text-decoration: none;
 }
 
-button{
+.button_1{
     background: linear-gradient(180deg, #E1E1E1 0%, #FFFFFF 100%);
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);
     border-radius: 30vw;
@@ -163,6 +168,29 @@ button{
     align-items: center;
     text-align: center;
     color: #CA0000;
+}
+
+@media only screen and (max-width: 1200px) {
+    .button{
+        display: none;
+    }
+
+    .total{
+        width: 66.6vw;
+        height: 75vw;
+    }
+
+    .h1_1{
+        font-size: 8.25vw;
+    }
+
+    .p_a, li{
+        font-size: 1.92vw;
+    }
+
+    .p{
+        width: 57vw;
+    }
 }
 
 @media only screen and (min-width: 1920px) {
@@ -194,6 +222,7 @@ button{
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -296,6 +325,45 @@ button{
     background-clip: text;
     letter-spacing: -0.01em;
     color: #FFFFFF;
+}
+
+@media only screen and (max-width: 1200px) {
+    .h1_2{
+        font-size: 7.8vw;
+    }
+
+    .img_1{
+        width: 78.75vw;
+        height: 45vw;
+    }
+
+    .p_b{
+        width: 67.5vw;
+        font-size: 1.95vw;
+    }
+
+    .button_mobile{
+        display: flex;
+        justify-content: center;
+    }
+
+    .button_2{
+        background: linear-gradient(180deg, #E1E1E1 0%, #FFFFFF 100%);
+        box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);
+        border-radius: 30vw;
+        width: 26.4vw;
+        height: 5.1vw;
+        font-family: 'Noto Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 1.4vw;
+        justify-content: center;
+        line-height: 31px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: #CA0000;
+    }
 }
 
 @media only screen and (min-width: 1920px) {
