--- a/css/structure.css
+++ b/css/structure.css
@@ -3,6 +3,7 @@ html{
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
     height: 300vh;
     display: grid;
 
@@ -13,8 +14,25 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
     display: flex;
+    height: 300vh; 
+    justify-content: space-evenly;
     flex-flow: column;
+}
+
+.section_1{
     height: 100vh;
+    display: grid;
+    align-content: space-evenly;
+}
+
+.section_2{
+    height: 100vh;
+}
+
+.section_3{
+    height: 100vh;
+    display: grid;
+    align-items: center;
 }
 
 nav{
@@ -140,15 +158,6 @@ main{
     z-index: 1;
 }
 
-body{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: auto;
-    display: flex;
-    flex-flow: column;
-    height: 100vh;
-    justify-content: center;
-}
 
 .total{
     display: grid;
@@ -251,7 +260,6 @@ h1{
     -webkit-text-stroke-color: #CA0000;
     -webkit-text-stroke-width: 0.25vw;
     background-clip: text;
-    text-fill-color: transparent;
     text-shadow: 7px 4px 9px rgb(0 0 0 / 46%);
 }
 
@@ -308,6 +316,71 @@ p{
     line-height: 21px;
     text-align: center;
 }
+
+@media only screen and (max-width: 1200px) {
+    .button_1{
+        display: none;
+    }
+
+    .section_1 nav{
+        display: grid;
+        justify-content: center;
+    }
+
+    .logo_img{
+        width: 12vw;
+    }
+
+    .right{
+        display: none;
+    }
+
+    .left{
+        margin: auto;
+        width: 60vw;
+    }
+
+    .title{
+        margin: auto;
+        font-size: 8vw;
+    }
+
+    .text{
+        font-size: 2.3vw;
+    }
+
+    .h1_1{
+        font-size: 8vw;
+    }
+
+    .hemoglobina{
+        width: 72vw;
+    }
+
+    .p_1 p{
+        font-size: 2.3vw;
+    }
+
+    .h1_2{
+        font-size: 8vw;
+    }
+
+    .p_2 p{
+        font-size: 2.3vw;
+    }
+
+    .img_1{
+        width: 78.75vw;
+        height: 43.5vw;
+    }
+
+    .button_2{
+        width: 25.8vw;
+        height: 4.6vw;
+        font-size: 1.58vw;
+    }
+  }
+
 
 @media only screen and (min-width: 1920px) {
     html {
